# EcomMutiAgent

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  main.py
app/agents/: coupon_agent.py  graph.py  knowledge_qa_agent.py  order_lifecycle_agent.py  product_guide_agent.py  response_composer.py  router_agent.py  state.py
app/api/: chat.py
app/db/: database.py  schema.sql  seed.py  setup.py
app/domain/: models.py
app/services/: coupon_service.py  inventory_service.py  order_service.py  product_service.py  session_service.py
app/static/: app.js  styles.css
app/templates/: index.html
app/tools/: coupon_tools.py  knowledge_tools.py  order_tools.py  product_tools.py  registry.py
app/web/: routes.py
tests/: test_agent_flow.py  test_api_chat.py  test_coupon_service.py  test_database_seed.py  test_order_service.py  test_product_service.py  test_router_agent.py  test_tool_registry.py
