[project]
name = "multi-agent-ecommerce-assistant"
version = "0.1.0"
description = "FastAPI + LangGraph multi-agent ecommerce assistant demo"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "langgraph>=0.2.0",
    "mcp>=1.0.0",
    "pydantic>=2.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "uvicorn>=0.30.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
pythonpath = ["."]
